<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="24dp"
    android:paddingTop="8dp"
    android:paddingEnd="24dp"
    android:paddingBottom="8dp">

    <View
        android:id="@+id/amostra_cor_dialog"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:contentDescription="@string/escolher_cor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/matiz" />

    <SeekBar
        android:id="@+id/sb_matiz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="360" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/saturacao" />

    <SeekBar
        android:id="@+id/sb_saturacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/brilho" />

    <SeekBar
        android:id="@+id/sb_brilho"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100" />

</LinearLayout>
