<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.NovaMusicaFragment">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="600dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:hint="@string/titulo"
                app:boxStrokeColor="@color/input_selector"
                app:hintTextColor="@color/input_selector">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiTitulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:hint="@string/interprete"
                app:boxStrokeColor="@color/input_selector"
                app:hintTextColor="@color/input_selector">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiInterprete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/sp_generos"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"/>

            <EditText
                android:id="@+id/etnAno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/ano"
                android:inputType="number"
                android:maxLength="4"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/etnMinutos"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:gravity="center"
                    android:hint="@string/minutos"
                    android:inputType="number"
                    android:maxLength="2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:text=":"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/etnSegundos"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:gravity="center"
                    android:hint="@string/segundos"
                    android:inputType="number"
                    android:maxLength="2" />
            </LinearLayout>

            <Button
                android:id="@+id/btConfirma"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="?attr/colorSurfaceVariant"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>
