<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:gravity="center|start"
    android:orientation="vertical"
    android:textAlignment="center"
    tools:ignore="TextSizeCheck">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_musica"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|start"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <View
                    android:id="@+id/indicador_cor_genero"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@null" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/titulo_espaco"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="?attr/colorOnSurfaceVariant" />

                <TextView
                    android:id="@+id/tv_titulo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text=""
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textColor="?attr/colorOnSurfaceVariant" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:gravity="center|start"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center|start"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="5dp"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:textAlignment="center"
                        tools:ignore="VisualLintBounds">

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/interprete_espaco"
                            android:textAlignment="center"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:textColor="?attr/colorOnSurfaceVariant" />

                        <TextView
                            android:id="@+id/tv_interprete"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text=""
                            android:textAlignment="center"
                            android:textSize="16sp"
                            android:textColor="?attr/colorOnSurfaceVariant" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:textAlignment="center"
                        tools:ignore="VisualLintBounds">

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/genero_espaco"
                            android:textAlignment="center"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:textColor="?attr/colorOnSurfaceVariant" />

                        <TextView
                            android:id="@+id/tv_genero"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text=""
                            android:textAlignment="center"
                            android:textSize="16sp"
                            android:textColor="?attr/colorOnSurfaceVariant" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center|start"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:textAlignment="center">

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/duracao_espaco"
                            android:textAlignment="center"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:textColor="?attr/colorOnSurfaceVariant" />

                        <TextView
                            android:id="@+id/tv_duracao"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text=""
                            android:textAlignment="center"
                            android:textSize="16sp"
                            android:textColor="?attr/colorOnSurfaceVariant" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:textAlignment="center">

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/ano_espaco"
                            android:textAlignment="center"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:textColor="?attr/colorOnSurfaceVariant" />

                        <TextView
                            android:id="@+id/tv_ano"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text=""
                            android:textAlignment="center"
                            android:textSize="16sp"
                            android:textColor="?attr/colorOnSurfaceVariant" />

                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</LinearLayout>
